# aws-multi-llm-gateway-cost-analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
diagrams/: architecture.excalidraw  export_excalidraw.py
docs/architecture/: system.mmd
infra/: main.tf
src/: config.py
src/auth/: auth.py
src/cache/: cache.py
src/classifier/: classifier.py
src/gateway/: main.py
src/gateway/middleware/: auth.py  logging.py  rate_limit.py
src/gateway/routes/: admin.py  chat.py  health.py
src/observability/: dashboard.py  metrics.py
src/router/: router.py
tests/: conftest.py  test_auth.py  test_cache.py  test_classifier.py  test_router.py
