[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-gateway"
version = "0.1.0"
description = "Multi-LLM Routing & Cost-Optimization Gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.3",
    "python-dotenv>=1.0.1",
    "boto3>=1.34.120",
    "redis>=5.0.1",
    "qdrant-client>=1.10.1",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "openai>=1.30.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyyaml>=6.0.1",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pandas>=2.2.2",
    "types-PyYAML>=6.0.12",
    "pandas-stubs>=2.2.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501", "B008"]
fixable = ["F", "I", "UP", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "boto3*",
    "botocore*",
    "redis*",
    "qdrant_client*",
    "sentence_transformers*",
    "plotly*",
    "pandas*",
    "yaml",
    "structlog",
    "prometheus_client",
    "openai",
    "httpx",
    "passlib",
    "starlette",
    "uvicorn",
    "fastapi",
    "pydantic",
    "pydantic_settings",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]